--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -20,8 +20,9 @@
   }
   .clear {
     position: absolute;
-    left: 370px;
+    left: 92%;
     top: 15px;
+    margin-right: 20px;
     &:hover {
       cursor: pointer;
       opacity: 0.8;
@@ -31,6 +32,9 @@
 @media (max-width: 915px) {
   .root {
     width: 55%;
+    .clear {
+      left: 90%;
+    }
   }
 }
 @media (max-width: 530px) {
